@@ -3,6 +3,8 @@ lilv (0.15.0) unstable;
   * Add lilv_world_ask() for simply checking if a statement exists
   * Add lilv_nodes_merge()
   * Make lilv_plugin_get_port_by_designation() return a const pointer
+  * Require a URI for lilv_state_to_string() and fail gracefully otherwise
+  * Fail gracefully when lilv_state_new_from_string() is called on NULL
   * Make state loading functions fall back to lv2:default for port values,
     so a plugin description can be loaded as default state
   * Ignore state ports with no value instead of printing an error
@@ -15,7 +17,7 @@ lilv (0.15.0) unstable;
   * lilvmm.hpp: Add several missing methods
   * Update to waf 1.7.8 and autowaf r90 (install docs to versioned directory)
 
- -- David Robillard <d@drobilla.net>  Sat, 26 Jan 2013 21:14:13 -0500
+ -- David Robillard <d@drobilla.net>  Sat, 02 Feb 2013 15:10:18 -0500
 
 lilv (0.14.4) stable;
 
